--- a/stayl.css
+++ b/stayl.css
@@ -1,3 +1,7 @@
+body{
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    
+}
 table {
     width: 80%;
     margin: 20px auto;
@@ -10,4 +14,36 @@ table {
   }
   th {
     background-color: #f4f4f4;
+  }
+dialog{
+    width: 800px;
+    height: 400px;
+    display: flex;
+    justify-content: center;
+}
+
+  form {
+    margin-bottom: 30px;
+    max-width: 500px;
+
+  }
+  label, input {
+    display: block;
+    margin: 20px 0 ;
+    width: 100%;
+  }
+  input[type="submit"] {
+    width: auto;
+    padding: 8px 16px;
+    background-color: #00ADB5;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+  }
+  input:hover{
+    background-color: aquamarine;
+  }
+  label {
+    text-align: left;
   }
