Fix the display Fix the dialog and add button Add remve button to table

--- a/stayl.css
+++ b/stayl.css
@@ -47,3 +47,28 @@ dialog{
   label {
     text-align: left;
   }
+  dialog[open] {
+  display: block;
+}
+dialog {
+  display: none;
+}
+#btn {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  margin: 1rem;
+  padding: 0.7rem 1.2rem;
+  background-color: #00ADB5;
+  color: white;
+  border: none;
+  border-radius: 8px;
+  font-weight: bold;
+  cursor: pointer;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.15);
+  transition: background 0.2s ease-in-out;
+}
+
+#btn:hover {
+  background-color: #0096a0;
+}
